--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -61,6 +61,7 @@ $base-border: 1px solid $base-border-color;
 $base-background-color: #fff;
 $secondary-background-color: rgba($light-grey, .5);
 $header-background-color: $accent-color;
+$footer-background-color: $medium-grey;
 $info-background-color: #ffe082;
 
 // Forms
